# openlab

./: .gitignore  copycontrolnode.sh
appli/education/distributed_algorithm/: algorithm_management.py  management_script.py
appli/education/distributed_algorithm/admin/: init_home_directory.sh
appli/education/distributed_algorithm/subject/: TP-DistribAlg-2016.tex  TP-DistribAlg-2017.tex
appli/iotlab/: CMakeLists.txt
appli/iotlab/control_node/control_node/: CMakeLists.txt  cn_alim.c  cn_autotest.c  cn_clock_config.c  cn_clock_config.h  cn_consumption.c  cn_control.c  cn_control.h  cn_i2c.c  cn_logger.c  cn_logger.h  cn_radio.c  constants.h  main.c
appli/iotlab/i2c_clock/: CMakeLists.txt  README.md  i2c_clock.c  i2c_slave.c
appli/iotlab/lib/: CMakeLists.txt  iotlab_serial.c  iotlab_serial.h  iotlab_time.c  iotlab_time.h  iotlab_uid_num_hashtable.c  iotlab_uid_num_hashtable.h
appli/iotlab/lib/scripts/: generate_uid_dict.py
appli/iotlab/lib/tests/: CMakeLists.txt
appli/iotlab/lib/tests/iotlab_serial/: test_iotlab_serial.c
appli/iotlab/lib/tests/iotlab_time/: test_iotlab_time.c
appli/iotlab/periph/iotlab_i2c/: iotlab_i2c_slave.c
appli/iotlab_examples/: CMakeLists.txt
appli/iotlab_examples/embers_sensors/: CMakeLists.txt  main.c
appli/iotlab_examples/ewsn_comp/: CMakeLists.txt  README.md  gps_synced_clock.c  receiver.c  sender.c  zep_sniffer.c
appli/iotlab_examples/tutorial/: CMakeCache.txt  Makefile  cmake_install.cmake
appli/tests/: CMakeLists.txt
appli/tests/embeddedgcov/: CMakeLists.txt  max_int.c  max_int.h  test_embeddedgcov.c
lib/: CMakeLists.txt  embeddedgcov.h
lib/embeddedgcov/: README  base.c  gcc_4_7.c  gcov.h  gcov_.h  save_gdca.py
lib/event/: event.c  event_custom.h
lib/softtimer/: soft_timer_delay.c
platform/scripts/: stm32f103rey6.ld
